<resources>
    <string name="app_name">BBIC</string>
    <string name="StringValue">이미지가 열리지 않습니다.</string>
    <string name="setting_header_text">설정</string>
    <string name="subway_header_text">지하철 노선도</string>
    <string name="user_name">유저명</string>
    <string name="kakao_APP_Key">2f3198abf019768640ab25011210a35b</string>
    <string name="test">test</string>
    <string name="name_info_window">Info Window</string>
    <string name="description_info_window">정보 창</string>
    <string name="format_info_window_on_marker">마커: %s</string>
    <string name="format_info_window_on_map">좌표: (%1$.5f, %2$.5f)</string>
    <string name="odsay_key">d/F477b1GZGKZgWCv8LynPEERmoxCdE1jSOojHzKNPM</string>
    <string name="todo">TODO</string>
    <string name="friend_list">친구목록</string>
    <string name="status">●</string>
    <string name="gpsCheck">위치 권환 확인</string>
    <string name="gpsMessage">본 어플리케이션은\n위치 권한정보를 사용하는 \n어플리케이션입니다.\n\n아래 버튼을 클릭하여\n위치 권환을 \'항상허용\'으로\n적용해주시길 부탁드리겠습니다.</string>
    <string name="personal_processing_header">개인정보 처리방침</string>
    <string name="drawer_list_header">약속 선택</string>
    <string name="terms_conditions_header">이용약관</string>
    <string name="find_history">최근내역</string>
    <string name="history_start">출발지</string>
    <string name="history_end">도착지</string>
</resources>