<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal">

    <ImageButton
        android:id="@+id/view_header_ghost_btn"
        android:layout_width="30sp"
        android:layout_height="30sp"
        android:background="@color/transparent"
        android:src="@drawable/ghost"
        android:scaleType="fitCenter"
        android:layout_marginStart="15sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/StringValue"/>

    <ImageButton
        android:id="@+id/view_header_setting_btn"
        android:layout_width="30sp"
        android:layout_height="30sp"
        android:background="@color/transparent"
        android:src="@drawable/ic_baseline_settings_24"
        android:scaleType="fitCenter"
        android:layout_marginStart="45sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/StringValue"/>

    <ImageView
        android:id="@+id/view_header_profile"
        android:layout_width="100sp"
        android:layout_height="100sp"
        android:src="@drawable/image_profile"
        android:layout_marginTop="30sp"
        android:layout_marginEnd="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/StringValue"/>

    <TextView
        android:id="@+id/view_header_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/fontstyle"
        android:text="@string/user_name"
        android:textAlignment="textStart"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:layout_marginTop="65sp"
        android:layout_marginStart="15sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/view_header_code"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/fontstyle"
        android:text="@string/user_name"
        android:textAlignment="textStart"
        android:textColor="@color/normal"
        android:textSize="15sp"
        android:layout_marginTop="95sp"
        android:layout_marginStart="15sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="1sp"
        android:background="@drawable/bar"
        android:backgroundTint="@color/bar"
        android:layout_marginTop="140sp"
        android:layout_marginStart="20sp"
        android:layout_marginEnd="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="SmallSp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/friend_list"
        android:fontFamily="@font/fontstyle"
        android:textAlignment="textStart"
        android:textColor="@color/PersianBlue"
        android:layout_marginTop="145sp"
        android:layout_marginStart="15sp"
        android:textSize="25sp" />

</androidx.constraintlayout.widget.ConstraintLayout>